@@ -422,6 +422,21 @@ o device: use madvise(address, length, MADV_DONTNEED); when freeing mmapped
 o PRO: review AES usage in read_page; if the page is mmapped
     then decryption is not applied
 
+o when the file format is changed then...
+    o improve node layout compression (when the file format changes)
+        x flags are not required at all if fixed length record size > 8
+            (and record size is too large for inline records)
+            -> set m_flags to null if they don't exist -> avoids a new member
+        o compress the flags for the DefaultRecordList (4 bit per item)
+            -> are 4 bit sufficient if compression is enabled? - yes!
+        o Default Layout: can compress the flags for the Duplicate*RecordList?
+        o UpfrontIndex: use bit packing to compress slot/offset pairs?
+        . DuplicateTable: also compress the flags
+    o internal node layout: store page IDs div pagesize to get smaller
+        integers (will be compressed better)
+    o add to monster testsuite
+    o rebase hamsterdb-pro
+
 o erlang fixes are required
     o 2 tests are failing
     o quickcheck-ci.com
@@ -431,21 +446,6 @@ o erlang fixes are required
         periodically checked with the API. A cursor can be used to remove a
         specific duplicate, or to fetch a specific duplicate.
     o QuickCheck: create a new property for testing recnos, with lots of deletes
-
-o when the file format is changed then...
-    o improve node layout compression (when the file format changes)
-        o flags are not required at all if fixed length record size > 8
-            (and record size is too large for inline records)
-        o compress the flags for the DefaultRecordList (4 bit per item)
-        o Default Layout: can compress the flags for the Duplicate*RecordList
-        o DuplicateTable: also compress the flags
-        o UpfrontIndex: use bit packing to compress slot/offset pairs
-    o internal node layout: store page IDs div pagesize to get smaller
-        integers (will be compressed better)
-        o and align pages to the pagesize when using malloc
-        o then compress them with bitpacking (scroll down to 2.1.9-pro for
-            details)
-    o rebase hamsterdb-pro
 
 o windows cleanups
     o The C# PInvoke for ham_cursor_find is missing the Record structure
